@@ -1,5 +1,6 @@
 import java.lang.reflect.Array;
 import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 
@@ -7,7 +8,7 @@ public class Umpire {
     public int id;
 
     public List<Match> matches = new ArrayList<>();
-    public List<Match> feasibleMatches = new ArrayList<>();
+    public ArrayList<List<Match>> feasibleMatches = new ArrayList<>();
     public int[] visitedTeams = new int[Main.nTeams];
 
     public Umpire(int id) {
@@ -20,22 +21,27 @@ public class Umpire {
         this.visitedTeams = other.visitedTeams.clone();
     }
 
-    public int addToMatch(Match m){
-        Match prevMatch = matches.getLast();
+    public int addToMatch(Match m) {
+        m.isAssigned = true;
         visitedTeams[m.homeTeam.teamId]++;
         matches.add(m);
+        // if (m.round != 13) System.out.println("Added match: " + m.index + " to umpire: " + this.id + " in round: " + m.round);
 
         if(matches.size() == 1){
             return 0;
         }
         
+        Match prevMatch = matches.get(matches.size() - 2);
         return Main.dist[prevMatch.homeTeam.teamId][m.homeTeam.teamId];
     }
 
     public int removeFromMatch(){
-        Match m = matches.getLast();
+        Match m = matches.get(matches.size() - 1);
+        m.isAssigned = false;
         visitedTeams[m.homeTeam.teamId]--;
-        Match removedMatch = matches.removeLast();
+        Match removedMatch = matches.remove(matches.size() - 1);
+
+        // if (m.round != 13) System.out.println("    Removed match: " + m.index + " from umpire: " + this.id + " in round: " + m.round);
 
         if(matches.size() == 0){
             return 0;
@@ -67,6 +73,21 @@ public class Umpire {
         }
 
         return teamsToVisit <= roundToGo;
+    }
+
+    public void fillFeasibleMatches(int round){
+        List<Match> matchesForRound = new ArrayList<>();
+        for(Match m : Main.matches){
+            if (m.round == round){
+                matchesForRound.add(m);
+            }
+        }
+        feasibleMatches.add(round, matchesForRound);
+    }
+
+    public boolean removeFeasibleMatch(int round, Match m){
+        feasibleMatches.get(round).remove(m);
+        return feasibleMatches.get(round).size() == 0;
     }
 
     @Override
